# cgpt

./: .gitignore  .markdownlint.yml  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  RELEASING.md  SECURITY.md  SOURCERY_REMOVAL_GUIDE.md  TECHNICAL.md  cgpt.py  config.json  pyproject.toml  requirements.txt  tox.ini
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docs-guard.yml  lint.yml  tests.yml
cgpt/: __init__.py
cgpt/cli/: __init__.py  parser.py
cgpt/commands/: discovery.py  dossier.py  dossier_handlers.py  dossier_options.py  dossier_roots.py  dossier_selection.py  extract_index.py  init_doctor.py  project.py
cgpt/core/: color.py  constants.py  env.py  io.py  layout.py  project.py  zip_safety.py
cgpt/domain/: config_schema.py  conversations.py  dossier_builder.py  dossier_cleaning.py  dossier_cleaning_cleanup.py  dossier_cleaning_index.py  dossier_cleaning_sources.py  indexing.py
docs/: INDEX.md
docs/roadmap/: shared-roadmap.md
docs/runbooks/: ai-agent-reference.md  engineering-quality-backlog.md
docs/specs/: current-capabilities.md  product-vision.md  v0.2.1-edge-hardening.md  v0.2.2-remainder-hardening.md  v0.2.20-split-audit.md  v0.2.3-hardening-followups.md
scripts/: gh_retry.sh  release_check.sh  release_via_pr.sh
tests/: test_cli_critical_paths.py  test_edge_case_hardening.py  test_redaction_incremental.py
