[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgpt"
dynamic = ["version"]
description = "ChatGPT export helper (zips -> extracted -> dossiers)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["chatgpt", "cli", "exports", "dossier"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
docx = ["python-docx>=0.8.11"]
dev = ["ruff==0.9.10", "tox>=4.24.1"]

[project.scripts]
cgpt = "cgpt:main"

[tool.setuptools]
py-modules = ["cgpt"]

[tool.setuptools.dynamic]
version = { attr = "cgpt.__version__" }
